# agent

./: .gitignore  CLAIMING_IMPLEMENTATION.md  CNAME  Cargo.toml  Justfile  LICENSE  PROJECT_STRUCTURE.md  README.md  config.example.toml  index.html
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/spelling/: expect.txt
.github/instructions/: agent-domain.instructions.md  documentation.instructions.md  openapi-codegen.instructions.md  rust-code-style.instructions.md  testing.instructions.md
.github/workflows/: dependabot-automerge.yml  release-deployment.yml  release-drafter.yml  spelling.yml  unit-tests.yml  update-dependencies.yaml
config/: config.example.toml
deployments/install-script/: install.sh  smotra.sh
docs/: CLAIMING_IMPLEMENTATION.md  CONTRIBUTING.md  GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALL_SCRIPT.md  OPENAPI_CODE_GENERATION.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md
docs/features/: CLAIMING_IMPLEMENTATION.md  CONFIG_HOTRELOAD.md  IMPLEMENTATION_STATUS.md  RESULT_CACHE.md  SELF_UPGRADE.md
examples/: 002_heartbeat_demo.rs  003_result_cache_demo.rs  010_plugin.rs  011_plugin_registry.rs  020_self_upgrade.rs  heartbeat_demo.rs  plugin.rs
releases/latest/: manifest.json
releases/v0.0.10/: agent-v0.0.10-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.10-x86_64-unknown-linux-musl.tar.gz.sha256
releases/v0.0.11/: agent-v0.0.11-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.11-x86_64-unknown-linux-musl.tar.gz.sha256
releases/v0.0.12/: agent-v0.0.12-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.12-x86_64-unknown-linux-musl.tar.gz.sha256  manifest.json
releases/v0.0.13/: agent-v0.0.13-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.13-x86_64-unknown-linux-musl.tar.gz.sha256  manifest.json
releases/v0.0.14/: agent-v0.0.14-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.14-x86_64-unknown-linux-musl.tar.gz.sha256  manifest.json
releases/v0.0.15/: agent-v0.0.15-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.15-x86_64-unknown-linux-musl.tar.gz.sha256  manifest.json
releases/v0.0.9/: agent-v0.0.9-x86_64-unknown-linux-gnu.tar.gz.sha256  agent-v0.0.9-x86_64-unknown-linux-musl.tar.gz.sha256  manifest.json
src/: agent.rs  error.rs  lib.rs  types.rs
src/agent_config/: hot_reload.rs  loader.rs  mod.rs  reload.rs  types.rs
src/agent_config/hot_reload/: config_file_watcher.rs  mod.rs  orchestrator.rs  reload.rs  server.rs  sighup.rs
src/agent_config/server_config/: mod.rs  persistence.rs  types.rs
src/cache/: mod.rs  store.rs
src/claim/: display.rs  mod.rs  network.rs  polling.rs  registration.rs  token.rs  types.rs  workflow.rs
src/config/: loader.rs  mod.rs  types.rs
src/core/: agent.rs  mod.rs  types.rs
src/examples/: plugin.rs
src/monitor/: coordinator.rs  mod.rs  ping.rs  server.rs
src/openapi/: mod.rs
src/openapi/omg/: mod.rs  models.rs  responses.rs
src/plugin/: mod.rs  registry.rs  trait_def.rs
src/reporter/: cache.rs  heartbeat.rs  mod.rs  results.rs  server.rs
src/results/: mod.rs
src/self_updater/: replacer.rs  server.rs
src/self_upgrade/: checker.rs  downloader.rs  environment.rs  github.rs  mod.rs  replacer.rs  server.rs
src/updater/: checker.rs  downloader.rs  environment.rs  mod.rs  replacer.rs  server.rs  task.rs
tests/: cache_integration_tests.rs  claim_api_test.rs  claim_integration_tests.rs  config_reload_integration_tests.rs  heartbeat_integration_tests.rs  self_upgrade_integration_tests.rs
