[package]
name = "smotra-agent"
version = "0.1.0"
edition = "2021"
authors = ["Smotra Team"]
description = "Distributed monitoring agent for tracking reachability and performance"
license = "MIT"

[lib]
name = "smotra_agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "agent-cli"
path = "src/bin/agent_cli/main.rs"

[[example]]
name = "plugin"
path = "src/examples/plugin.rs"

[[bin]]
name = "agent-updater"
path = "src/bin/agent_updater.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
surge-ping = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
parking_lot = "0.12"
ratatui = "0"
crossterm = "0"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.12"
mockito = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
