[package]
name = "smotra-agent"
version = "0.1.0"
edition = "2021"
authors = ["Smotra Team"]
description = "Distributed monitoring agent for tracking reachability and performance"
license = "MIT"

[lib]
name = "smotra_agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "agent-cli"
path = "src/bin/agent_cli/main.rs"

[[bin]]
name = "agent-updater"
path = "src/bin/agent_updater.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
surge-ping = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
reqwest = { version = "0", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0"
parking_lot = "0"
ratatui = "0"
crossterm = "0"
rand = "0"
sysinfo = "0"
sha2 = "0"
hex = "0"
hostname = "0"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
