[package]
name = "smotra"
version = "0.1.0"
edition = "2021"
authors = ["Smotra Team"]
description = "Distributed monitoring agent for tracking reachability and performance"
license = "MIT"

[lib]
name = "smotra"
path = "src/lib.rs"

[[bin]]
name = "smotra"
path = "src/bin/smotra.rs"

[[bin]]
name = "smotra-cli"
path = "src/bin/smotra_cli/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
surge-ping = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
reqwest = { version = "0", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0"
parking_lot = "0"
ratatui = "0"
crossterm = "0"
rand = "0"
sysinfo = "0"
sha2 = "0"
hex = "0"
semver = "1"
octocrab = "0"
self-replace = "1"
flate2 = "1"
tar = "0"
hostname = "0"
if-addrs = "0"
notify = "8"
notify-debouncer-full = "0"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
